language/move-model/tests/sources/module_level_spec_err_signature.exp
error: provided function signature must match function declaration: parameter mismatch
   ┌─ tests/sources/module_level_spec_err_signature.move:11:5
   │
11 │     spec store(s: &signer) {
   │     ^^^^^^^^^^^^^^^^^^^^^^

error: unresolved spec target
   ┌─ tests/sources/module_level_spec_err_signature.move:14:5
   │
14 │     spec store_undefined(s: &signer, value: u64) {
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
